<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="Accueil" />

        <item
            android:id="@+id/nav_dashboard"
            android:icon="@drawable/ic_dashboard"
            android:title="Dashboard" />

        <item
            android:id="@+id/nav_notifications"
            android:icon="@drawable/ic_notification"
            android:title="@string/mes_alertes" />
    </group>

    <group
        android:id="@+id/group_admin"
        android:visible="false">
        <item
            android:id="@+id/nav_admin_panel"
            android:icon="@drawable/ic_admin"
            android:title="@string/panneau_administrateur" />
    </group>

    <item android:title="@string/compte">
        <menu>
            <item
                android:id="@+id/nav_profile"
                android:icon="@drawable/ic_person"
                android:title="Mon Profil" />

            <item
                android:id="@+id/nav_logout"
                android:icon="@drawable/ic_logout"
                android:title="@string/d_connexion" />
        </menu>
    </item>

</menu>